--- a/src/web/public/index.html
+++ b/src/web/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>Edi Scholar: Arxidemic Search Engine</title>
     <link rel="stylesheet"
           href="./index.css">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
